Version 3.94-0

  *     xpathApply() and related functions work with builtin type "functions", 
        e.g. class.

  *     xpathApply() and related functions (getNodeSet, xpathSApply) allow
        the caller to specify multiple queries as a character vector
        and these are pasted together as compound location paths by
        separating them with a '|'.  This makes it easier for the
        caller to manage the different queries.

  *     assigning to a child of a node works, e.g. node[["abc"]] = text/node
        and node[[index]] = text/node.  We replace a matching name.  If the
        replacement value is text, we use the name to 

  *     getChildrenStrings() is a function that implements the equivalent of
        xmlApply(node, xmlValue) but faster because we avoid the function call
        for each element.

  *     options parameter for xmlParse() and htmlParse() for controlling the parser.
        (Currently only used when encoding is explicitly specified.)

  *     encoding parameter for xmlParse() and xmlTreeParse() now works for XML documents,
        not just HTML documents.

  *     Update for readHTMLTable() method so that we look at just the final <tr> node 
        in a <thead>.

Version 3.93-1

  *     Fixed bug in findXInclude() that sometimes got the wrong XMLXIncludeStartNode.
        Hence getNodeLocation() might report the wrong file, but correct line number!

  *     findXInclude() now has a recursive parameter that resolves the chain of XIncludes.
        This returns the full path to the file, relative to the base/top-level document,
        not just the parent document.

  *     Change to the default value of the error parameter in htmlParse() and htmlTreeParse() 
        which will generate a structured R error if there is an IO error.
        The set of issues that will raise an error will be broadened in the future.

Version 3.93-0

  *    Enabled the fixing of <dummy> namespaces by finding the definition o